--- a/mystyle.css
+++ b/mystyle.css
@@ -122,3 +122,26 @@
     50%  { transform: translate(0, 15px) !important; }
     100%   { transform: translate(0, -0px) !important; }   
 }
+
+.gojo-loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    top: 45%;
+    left: 40%;
+    position: absolute;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+} 
