--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 
-@import url("//cdn.web-fonts.ge/fonts/arial-geo-bold/css/arial-geo-bold.min.css");
+@import url("//cdn.web-fonts.ge/fonts/alk-tall-nusxuri/css/alk-tall-nusxuri.min.css");
 
 
 /* გარე დივი */
@@ -9,113 +9,113 @@
     margin: 0 !important;
     box-sizing: border-box !important;
 }
-/* ზედა ლეიერზე დასმული ჩარჩო */
+/* ბანერი */
 .anime-extention .banner{
-    position: absolute !important;
-    z-index: 999999 !important;
-    width: 260px !important;
-    top: 400px !important;
-    left: 10px !important;
-    height: 540px !important;
-    background: #ee4a94b4!important;
-    border-radius: 16px !important;
+    position: fixed !important;
+    z-index: 999999 !important ;
+    width: 260px !important ;
+    top: 50%;
+    transform: translate(-97%,-50%);
+    min-height: 540px !important;
+      background: #ee4a94b4!important;
+    border-radius: 16px !important ;
     box-shadow: 0 4px 30px #ee4a94 !important;
     backdrop-filter: blur(2.3px) !important;
     border: 1px solid rgba(255, 35, 249, 0.3) !important;
-    
+    transition: 0.2s all;
+
+}
+/* ბანერის გამოჩენა ჰოვერზე */
+.anime-extention .banner:hover{
+    transform: translate(0,-50%);
 }
 /* სათაური */
 .anime-extention h1{
-    width: 100% !important;
-    margin-top:  50px !important;
-    margin-bottom:  20px !important;
-    font-size: 30px !important;
-    backdrop-filter: 0 !important;
-    letter-spacing: 3px !important;
-    color: black !important;
-    font-weight: 400 !important;
-    text-align: center !important;
-    filter: brightness(0.9) !important;
+    width: 100% !important ;
+    margin-top: 20px !important ;
+    margin-bottom:  20px !important ;
+    font-size: 30px !important ;
+    color: black !important ;
+    font-weight: 400 !important ;
+    text-align: center !important ;
+    filter: brightness(0.9) !important ;
 }
 
 /* ფოტოები */
 .anime-extention img{
-    filter: grayscale(100%) !important;
-    width: 128px !important;
-    height: 128px !important;
-    transition: 0.4s !important;
-    object-fit: cover !important;
-    display: block !important;
-    margin: auto!important;
-    margin-top: 5px !important;
-    margin-bottom: 5px !important;
-    border-radius: 50% !important;
+    filter: grayscale(100%) ;
+    width: 128px ;
+    margin-top:20px !important;
+    margin-bottom:20px !important;
+    height: 128px ;
+    transition: 0.4s ;
+    object-fit: cover ;
+    display: block ;
+    margin: auto;
+    margin-top: 5px ;
+    margin-bottom: 5px ;
+    border-radius: 50% ;
 }
 /* ფოტოზე მაუსის მიტანისას */
 .anime-extention img:hover{
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
-    /* background-color: red !important; */
-    padding: 20px !important;
-    filter: grayscale(0%) !important;
-    cursor: pointer !important;
+    margin-top: 20px ;
+    margin-bottom: 20px ;
+    scale: 1.1;
+    filter: grayscale(0%) ;
+    cursor: pointer ;
     
 }
 /* პოპაპი */
 .anime-extention .popup{
-    height: 100px !important;
-    width: 300px !important;
-    filter: brightness(0.9) contrast(1.9) ;  
-    color: rgb(21, 5, 201) !important;
-    text-align: center !important;
-    text-decoration: none !important;
-    display: none !important;
-    position: absolute !important;
-    z-index: 100 !important;
-    font-size: 35px !important;
-    font-weight: bold !important;
-    line-height: 10px !important;
-    padding: 10px !important;
-    margin-top: 20px !important;
-    margin-left: 210px !important;
-    border-radius: 20px !important;
-    overflow: hidden!important;
-    float: left!important;
-    background-color: #ff24f8c1 !important;
+    height: 100px !important ;
+    width: 300px !important ;
+    filter: brightness(0.9) contrast(1.9) !important ;  
+    color: rgb(21, 5, 201) !important ;
+    text-align: center !important ;
+    display: none !important ;
+    position: absolute !important ;
+    z-index: 100 !important ;
+    font-size: 35px !important ;
+    font-weight: bold !important ;
+    padding: 10px !important ;
+    margin-top: 20px !important ;
+    margin-left: 240px !important ;
+    border-radius: 20px !important ;
+    background: #ee87b5b8;
     backdrop-filter: blur(20px) !important;
-    
+    border: 1px solid rgba(255, 35, 248, 0.778) !important ;
 
 }
 /* ბანერი აქტიური */
 .anime-extention div.active{
-    display: block !important;
+    display: block !important ;
 }
 /* პოპაპი აქტიური */
 .anime-extention .popup.active{
-    display: flex !important;
+    opacity: 1;
+    display: flex;
 }
 
 .anime-extention .popup p{
-    font-family: "Arial GEO Bold", sans-serif !important;
-    font-weight: 400 !important;
-    font-size: 20px !important;
-    margin: 10px !important;
-    letter-spacing: 1px !important;
-    width: 100% !important;
-    height: 100% !important;
-    line-height: normal!important;
+    font-weight: 300 !important ;
+    font-size: 20px !important ;
+    margin: 10px !important ;
+    width: 100% !important ;
+    letter-spacing: 1px;
+    height: 100% !important ;
 }
 
 /* ტივტივის ანიმაცია */
-.floating { 
-    animation-name: floating !important;
-    animation-duration: 3s !important;
-    animation-iteration-count: infinite !important;
-    animation-timing-function: ease-in-out!important;
+.floatingAnimation { 
+    animation-name: floating !important ;
+    animation-duration: 2.4s !important ;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
 }
  
 @keyframes floating {
-    0% { transform: translate(0,  0px) !important; }
-    50%  { transform: translate(0, 15px) !important; }
-    100%   { transform: translate(0, -0px) !important; }   
+    0% { transform: translate(0,  0px) !important ; }
+    50%  { transform: translate(0, 20px) !important ; }
+    100%   { transform: translate(0, -0px) !important ; }   
 }
+
